frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: vaidhi/frontend-ecommerce:latest  
          ports:
            - containerPort: 80  # Port for the frontend app
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80  # External port to expose
      targetPort: 80  # Internal container port
  type: LoadBalancer  # Minikube will use NodePort internally to expose the service
